menifests/logto_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logto
  namespace: llm
spec:
  selector:
    app: logto
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: NodePort
