menifests/logto-ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: llm
  name: logto1
  labels:
    app: logto1
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "logto"
    ingress.gcp.kubernetes.io/pre-shared-cert: "llm-bundle"
    networking.gke.io/managed-certificates: "llm-bundle"
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: logto-1
                port:
                  number: 3001
  #tls:
   #- hosts:
     #- civilbrain.ai
     #secretName: logto-secret
